p2/setup/setup-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app1
  labels:
    app: deploy-app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app1-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app1-volume
          hostPath:
            path: /vagrant/rsc/app1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2-deployment
  labels:
    app: webapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
        - name: webapp2
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webapp2-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: webapp2-volume
          hostPath:
            path: /vagrant/rsc/app2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp3-deployment
  labels:
    app: webapp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp3
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
        - name: webapp3
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: webapp3-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: webapp3-volume
          hostPath:
            path: /vagrant/rsc/app3
