p2/setup/setup-webapp3.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: webapp3-deployment    
  labels:        
    app: webapp3   
spec:            
  replicas: 1    
  selector:       
    matchLabels: 
      app: webapp3
  template:        
    metadata:
      labels:    
        app: webapp3
    spec:        
      containers:    
      - name: webapp3
        image: wilS/webapp3
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-service
spec:
  selector:
    app: webapp3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
